Add nuevos endpoints
